--- a/main.tex
+++ b/main.tex
@@ -382,4 +382,48 @@ $$\frac{d}{dx}[g(x)]^n = n[g(x)]^{n-1} \cdot g'(x)$$
 \textbf{Implicit Differentiation: } If the function is stuck in implicit form, then differentiate both sides of the equation with respect to $x$ and solve the resulting equation for $y'$.\\
 \textbf{Note: }
 $$\frac{d}{dx}(y^n) \neq{} ny^{n-1}  \ \ \ \ \ \ \frac{d}{dx}(y^n) = ny^{n-1} \cdot y'$$
+
+\subsection{Day 11}
+\subsubsection{Related Rates:}
+A related rates problem is to compute the rate of change (derivative) of one quantity in terms of the rate of change of another quantity, which is more easily measured.
+\\\\
+\noindent How to approach a related rates problem:
+\begin{enumerate}
+    \item Read the problem, and draw a diagram if possible.
+    \item Assign symbols to all variables that are a function of time.
+    \item Find an equation that relates the two variables.
+    \item Using the Chain Rule to differentiate both sides with respect to time.
+    \item Substitute the given information into resulting equation and solve for the unknown
+    rate.
+\end{enumerate}
+
+\subsection{Day 12}
+\subsubsection{Maximum and Minimum Values:}
+\textbf{Absolute or Global [Max/Min]: } The [max/min] $y$-value in the domain. 
+\textbf{Relative or Local [Max/Min]: } The [max/min] $y$-value in a given range around a $x$-value. Can only occur when the graph goes from [increasing to decreasing / vice-versa]
+\textbf{Note: } The endpoint of a graph can never be a relative [max/min] because one side of the point is always undefined. 
+
+\subsubsection{Increasing/Decreasing Functions:}
+$$\includegraphics[scale=.75]{media/increasing-decreasing-functions.png}$$
+
+
+\subsubsection{Concavity:}
+$$\includegraphics[scale=.75]{media/concavity.png}$$
+
+\subsubsection{Extreme Value Theorem:} Suppose that $f(x)$ is continuous on the interval $[a,b]$ then there are two numbers, $a \leq c, d \leq d$ so that $f(c)$ is an absolute maximum for the function and $f(d)$ is an absolute minimum for the function.
+
+\subsubsection{Fermat's Theorem:} If $f$ has a local max or min at $a$, and $f'(a)$ exists, then $f'(a) = 0$.
+
+\subsubsection{Critical Number: } A critical number of a function $f$ is a number $c$ in the domain of $f$ such that either $f'(c) = 0$ or $f'(c) = $ DNE
+
+\subsubsection{Absolute Extreme: } To find the absolute max and min values of a continuous function $f$ on a closed interval $[a,b]$: 
+
+\begin{enumerate}
+    \item Find the critical numbers of the function on $(a,b)$
+    \item Find the values of $f$ at the critical numbers of $f$ in $(a,b)$
+    \item Find the values of $f$ at the end points of the interval, in other words, find $f(a)$ and $f(b)$.
+    \item The largest of the values from steps 2 and 3 is the absolute max, the smallest is the absolute min.
+    
+\end{enumerate}
+
 \end{document}
